--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background: linear-gradient(to bottom right, white, black);
 }
 
 .card {
@@ -70,6 +71,10 @@
     align-items: center;
     /* border: 1px solid red; */
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.mid span {
+    font-weight: 900;
 }
 
 /* input */
