--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,17 +1,18 @@
 .outer {
-    border: 1px solid white;
+    /* border: 1px solid white; */
     height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: center;
+    position: relative;
     /* align-items: center; */
 }
 
 .carousel {
     /* border: 1px solid white; */
     width: 100vw;
-    height: 50vh;
-    position: relative;
+    height: 100vh;
+    /* position: relative; */
     /* overflow: hidden; */
 }
 
@@ -21,9 +22,10 @@
     justify-content: center;
     align-items: center;
     border: 2px solid gray;
-    top: 70%;
+    top: 50vh;
     width: 4rem;
     height: 4rem;
+    margin: 1rem;
     border-radius: 50%;
     background-color: rgb(0, 0, 0, .5);
     z-index: 2;
@@ -54,7 +56,7 @@
     display: flex;
     align-items: center;
     position: absolute;
-    top: 50%;
+    /* top: 50%; */
     transform: translateY(-50%);
     transition: 300ms;
     overflow: hidden;
@@ -75,6 +77,7 @@
 .focused {
     /* outline: 2px solid yellow; */
     width: 80vw;
+    height: 99vh;
     opacity: 1;
 }
 
