--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -12,14 +12,14 @@
     width: max(300px, 80vw);
     max-width: 450px;
     /* height: 600px; */
-    border: 2px solid white;
-    /* background-color: black; */
+    border: 1px solid white;
+    background-color: black;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 4rem .5rem;
-    background: linear-gradient(to right bottom, black 49%, white 50%, black 51%);
+    /* background: linear-gradient(to right bottom, black 49%, white 50%, black 51%); */
     background-size: 200% 200%;
     background-position: 99% 99%;
     transition: 300ms;
