--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -62,22 +62,23 @@
     overflow: hidden;
 }
 
-.images img {
+.images div {
     padding: 1rem;
     transition: 300ms;
-    /* border: 1px solid white; */
+    border: 1px solid white;
     filter: grayscale();
 }
 
 .unfocused {
     opacity: 0.5;
     width: 10vw;
+    height: 10vh;
 }
 
 .focused {
     /* outline: 2px solid yellow; */
     width: 80vw;
-    height: 99vh;
+    height: 100vh;
     opacity: 1;
 }
 
