--- a/src/components/Terminal/Terminal.module.css
+++ b/src/components/Terminal/Terminal.module.css
@@ -1,18 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap');
+/* font-family: 'Bruno Ace SC', cursive; */
+
+
 .main {
     width: 100vw;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(to bottom, white, rgb(77, 77, 77))
+    position: absolute;
+    z-index: -1;
+    background: transparent;
+    /* background: linear-gradient(to bottom, white, rgb(77, 77, 77)) */
 }
 
 .terminal {
-    width: max(350px, 60vw);
-    min-width: 350px;
-    height: max(300px, 70vh);
+    width: max(280px, 40vw);
+    /* min-width: 350px; */
+    height: max(200px, 60vh);
     overflow: hidden;
     border-radius: 10px;
+    border: 1px solid gray;
+    background: black;
+    transition: 500ms;
 }
 
 .head {
@@ -51,7 +61,7 @@
     width: 100%;
     height: 100%;
     padding: .5em;
-    background-color: black;
+    /* background-color: black; */
 }
 
 .line>*, .head>* {
@@ -84,4 +94,30 @@
     100%{
         color: white;
     }
+}
+
+.canvas {
+    /* border: 1px solid blue; */
+    /* height: 100vh; */
+    /* background: none; */
+    /* position: absolute;
+    z-index: -1; */
+}
+
+.loader {
+    position: absolute;
+    z-index: -2;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+
+.loader span {
+    font-size: 3rem;
+    font-family: 'Bruno Ace SC', cursive;
+    transition: 500ms;
+}
+
+.active {
+    color: black;
 }
