--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,10 +1,12 @@
 .outer {
-    /* border: 1px solid white; */
+    /* border: 2px solid red; */
     height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: center;
-    position: relative;
+    background: black;
+    position: absolute;
+    transition: 300ms;
     /* align-items: center; */
 }
 
