--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -1,18 +1,17 @@
+.outer * {
+    color: white;
+}
 
 .outer {
-    /* position: fixed;
-    inset: 0; */
     width: 100vw;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* border: 2px solid red; */
     position: absolute;
     transition: 300ms;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    /* background: linear-gradient(to bottom right, gray, black, gray); */
 }
 
 .card {
@@ -36,19 +35,16 @@
 }
 
 .contact {
-    /* border: 1px solid red; */
     width: 100%;
     min-width: 280px;
     height: 4rem;
     display: flex;
     align-items: center;
-    /* padding: .5rem; */
 }
 
 .contact .svg, .contact button {
     min-width: 2.5rem;
     max-width: 3rem;
-    /* border: 1px solid white; */
     max-height: 2.5rem;
     min-height: 2.5rem;
     padding: .2rem;
@@ -57,10 +53,8 @@
 
 .mid {
     flex-grow: 1;
-    /* border: 1px solid green; */
     border-bottom: 2px solid rgba(10, 227, 238, .5);
     height: 4rem;
-    /* margin: 0rem; */
     display: flex;
     flex-direction: column;
     
@@ -71,7 +65,6 @@
     padding: .3em;
     display: flex;
     align-items: center;
-    /* border: 1px solid red; */
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
