--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -5,12 +5,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: transparent;
+    background: black;
     position: absolute;
     top: 0;
 }
 
 .text {
+	color: white;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 2.5rem;
     height: fit-content;
