--- a/src/components/Terminal/Terminal.module.css
+++ b/src/components/Terminal/Terminal.module.css
@@ -1,7 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap');
-/* font-family: 'Bruno Ace SC', cursive; */
-
-
 .main {
     width: 100vw;
     height: 100vh;
@@ -11,16 +7,16 @@
     position: absolute;
     z-index: -1;
     background: transparent;
-    /* background: linear-gradient(to bottom, white, rgb(77, 77, 77)) */
-}
+    background: #808080;
+    background: linear-gradient(333deg,#808080 0%, #000000 80%);
+    background: -webkit-linear-gradient(333deg,#808080 0%, #000000 80%);
+    background: -moz-linear-gradient(333deg,#808080 0%, #000000 80%);}
 
 .terminal {
     width: max(280px, 40vw);
-    /* min-width: 350px; */
     height: max(200px, 60vh);
     overflow: hidden;
     border-radius: 10px;
-    border: 1px solid gray;
     background: black;
     transition: 500ms;
 }
