--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,21 +1,29 @@
 .outer {
-    /* border: 2px solid red; */
     height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: center;
-    background: black;
+    background: rgb(0, 0, 0, .5);
+    backdrop-filter: brightness(50%);
+    -webkit-backdrop-filter: brightness(50%);
     position: absolute;
+    top: 0;
     transition: 300ms;
-    /* align-items: center; */
+}
+
+.cancel {
+    width: 4rem;
+    height: 4rem;
+    position: absolute;
+    z-index: 2;
+    top: 1rem;
+    right: 1rem;
+    font-size: 2rem;
 }
 
 .carousel {
-    /* border: 1px solid white; */
     width: 100vw;
     height: 100vh;
-    /* position: relative; */
-    /* overflow: hidden; */
 }
 
 .carousel button {
@@ -69,6 +77,7 @@
     transition: 300ms;
     border: 1px solid white;
     filter: grayscale();
+    background-color: black;
 }
 
 .unfocused {
@@ -78,7 +87,6 @@
 }
 
 .focused {
-    /* outline: 2px solid yellow; */
     width: 80vw;
     height: 100vh;
     opacity: 1;
